' plantuml diagram 
' author: Bennett Cook
' date: 7/18/2020
' desc: the uses only 2 switch inputs from the raspberry pi 
'        zero W, up_position and down_position
' ref: https://plantuml.com
' ref: https://plantuml.com/commons
' ref: https://plantuml-documentation.readthedocs.io/en/latest/

@startuml

title Garage Door Sequence

state "Idle" as idle
state "Startup" as startup
state "Open" as  open
state "Closed" as closed

state "MovingToOpen" as  moving_to_open
state "MovingToClose" as  moving_to_close

center footer  

 this sequence uses only 2 switch inputs from the raspberry pi zero W, 
 up_position and down_position read using IsUp and IsDown lambdas respectively.

endfooter

[*] --> idle : eGdInit
idle --> startup : eOnTime
startup : action: SetMovingLedOff 
startup --> open : eOnTime[IsUp && !IsDown]
startup --> closed : eOnTime[!IsUp && IsDown]


open --> moving_to_close : eOnTime[!IsUp]
open : on_entry: AddRowForOpen
open : action: SetMovingLedOff 

moving_to_close --> closed : eOnTime[IsDown]
moving_to_close : on_entry: AddRowForMovingToClose
moving_to_close : action: SetMovingLedOn 
moving_to_close --> open : eOnTime[IsUp]

moving_to_open --> open : eOnTime[IsUp]
moving_to_open : on_entry: AddRowForMovingToOpen
moving_to_open : action: SetMovingLedOn 
moving_to_open --> closed : eOnTime[IsDown]

closed --> moving_to_open : eOnTime[!IsDown]
closed : on_entry: AddRowForClosed
closed : action: SetMovingLedOff 

@enduml
